Добавил секцию отовы

--- a/source/index.html
+++ b/source/index.html
@@ -334,6 +334,7 @@
                     <p>Вы всегда найдете место для своей машины на нашей парковке</p>
                   </div>
                 </li>
+
                 <li class="advantages__item advantages-card">
                   <div class="advantages-card__value">
                     <p>350</p>
@@ -401,7 +402,53 @@
           <div class="container"></div>
         </section>
         <section class="feedback">
-          <div class="container"></div>
+          <div class="container">
+            <div class="feedback__wrapper">
+              <h2 class="feedback__title">Отзывы</h2>
+              <button class="feedback__previous">
+                <svg width="16px" height="32px">
+                  <use href="img/sprite.svg#juri-arrow"></use>
+                </svg>
+              </button>
+              <div class="feedback__list-wrapper">
+                <ul class="feedback__list">
+                  <li class="feedback__item feedback-card">
+                    <div class="feedback__image">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="img/feedback-1-mobile.webp 1x, img/feedback-1-mobile@2x.webp 2x" width="68" height="68">
+                        <source type="image/webp" srcset="img/feedback-1.webp 1x, img/feedback-1@2x.webp 2x" width="80" height="80">
+                        <source media="(max-width: 767px)" srcset="img/feedback-1-mobile.png 1x, img/feedback-1-mobile@2x.png 2x" width="68" height="68">
+                        <img src="img/feedback-1.jpg" srcset="img/feedback-1@2x.jpg 2x" alt="Автор отзыва." width="80" height="80">
+                      </picture>
+                    </div>
+                    <div class="feedback__text">
+                      <p>Анна Орлова</p>
+                      <p>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                    </div>
+                  </li>
+                  <li class="feedback__item feedback-card">
+                    <div class="feedback__image">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="img/feedback-1-mobile.webp 1x, img/feedback-1-mobile@2x.webp 2x" width="68" height="68">
+                        <source type="image/webp" srcset="img/feedback-1.webp 1x, img/feedback-1@2x.webp 2x" width="80" height="80">
+                        <source media="(max-width: 767px)" srcset="img/feedback-1-mobile.png 1x, img/feedback-1-mobile@2x.png 2x" width="68" height="68">
+                        <img src="img/feedback-1.jpg" srcset="img/feedback-1@2x.jpg 2x" alt="Автор отзыва." width="80" height="80">
+                      </picture>
+                    </div>
+                    <div class="feedback__text">
+                      <p>Анна Орлова</p>
+                      <p>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто, тренажеры обновляют, персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <button class="feedback__next">
+                <svg width="16px" height="32px">
+                  <use href="img/sprite.svg#juri-arrow"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </section>
         <section class="form-contacts">
           <div class="container">
