--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
         <div class="container header__container">
           <nav class="header__navigation">
             <div class="header__logo">
-              <a class="header__logo-link" href="#"><img src="img/svg/logo.svg" alt="Логотип фитнес центра Supergym." width="120" height="26"></a>
+              <a class="header__logo-link" href="index.html"><img src="img/svg/logo.svg" alt="Логотип фитнес центра Supergym." width="120" height="26"></a>
             </div>
             <div class="header__contact">
               <a class="header__contact-phone" href="+78005555555">8-800-555-55-55</a>
