--- a/source/sitemap.html
+++ b/source/sitemap.html
@@ -26,16 +26,14 @@
         <section class="intro">
           <div class="container">
             <h1>Разводящая страница</h1>
-            <p>На многостраничных сайтах используйте эту страницу для создания списков всех страниц и ссылок на них.</p>
-            <p>Это делается для удобства тестирования и для быстрого доступа к нужной странице.</p>
-            <h2>Пример</h2>
+            <div class="header__logo header__logo--map">
+              <a class="header__logo-link header__logo-link--map" href="index.html"><img src="img/svg/logo.svg" alt="Логотип фитнес центра Supergym." width="120" height="26"></a>
+            </div>
             <ol>
               <li>
-                <a href="index.html">Главная — index.html</a>
+                <a href="index.html">HTML Academy: Fitness</a>
               </li>
-              <li>
-                <a href="#">Название страницы (состояние страницы, если отдельное) — ссылка на страницу.</a>
-              </li>
+
             </ol>
           </div>
         </section>
